progress on application command and suggest/idea function

--- a/data/applications.json
+++ b/data/applications.json
@@ -1,3 +1,11 @@
 {
-    
+	"1048995109045272656": {
+		"applicant": 915670836357247006,
+		"name": "DillonB07#2167",
+		"application": "Hello World!",
+		"replit": "DillonB07",
+		"github": "DillonB07",
+		"votes": 0,
+		"voters": []
+	}
 }
