--- a/config.json
+++ b/config.json
@@ -6,7 +6,9 @@
             [1032305788494037082, true]
         ],
         "APPLICATION_CHANNEL": 1048989285447122987,
+        "APPLICATION_LOGS": 1049000955116539994,
         "IDEA_CHANNEL": 1045409126202736670
+        
     },
     "EMOTES": {
         "CHECKMARK": 1048989413889282058,
@@ -14,7 +16,8 @@
     },
     "ROLES": {
         "DEVELOPER": 1045408918916055179,
-        "NEW_DEVELOPER": 1046485274303148072
+        "NEW_DEVELOPER": 1046485274303148072,
+        "PRIORITY": 1043972448493781042
     },
     "WEBHOOKS": {
         "APPLICATIONS": 1234
