Remove weird characters from Raadsel

--- a/data/applications.json
+++ b/data/applications.json
@@ -1,1 +1,14 @@
-{}
+{
+    "1057028467813777488": {
+        "applicant": 1035412223813759036,
+        "name": "d31337#4787",
+        "application": "d31337",
+        "replit": "d31337",
+        "github": "NaN",
+        "votes": 2,
+        "voters": [
+            790232461052608554,
+            915670836357247006
+        ]
+    }
+}
