Fix gitignore for data

--- a/data/applications.json
+++ b/data/applications.json
@@ -6,6 +6,7 @@
         "replit": "d31337",
         "github": "NaN",
         "votes": 2,
+        "locked": true,
         "voters": [
             790232461052608554,
             915670836357247006
