--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .env
 __pycache__
 .DS_STORE
-venv/
-data/
+venv
+data
 .replit
 .breakpoints
 replit.nix
-.config/
-.upm/
+.config
+.upm
 poetry.lock
 pyproject.toml
+''$'\001\363\275\216''@'$'\370\240\211\002''@8'$'\r''@'$'\037\036\006\004''@@@@@'$'\330\002\330\002\b\003\004\030\003\030\003''@'$'\030\003''@'$'\034\034\001\001\004''@@'$'\020\b''L'$'\020\b''L'$'\020\001\005\020''L'$'\020\214\020\214\032\265''H'$'\001\032\265''H'$'\001\020\001\005''Д'$'\001\340\001\340\001\251\001\251\001\020\001\004\340\224\001\020\340\001\020\340\001\256'
