--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,7 @@ services:
   main:
     build: .
     container_name: RCC-Discord-Bot
+    volumes:
+      - ./data:/app/data
+    environment:
+      - BOT_TOKEN
